(lang dune 3.17)

(name askier)

(generate_opam_files true)

(source
 (github quackquackhonk/askier))

(authors "Sahana Tankala <sahanatankala@gmail.com>")

(maintainers "Sahana Tankala <sahantankala@gmail.com>")

; (documentation https://url/to/documentation)

(package
 (name askier)
 (synopsis "An ASCII Renderer")
 (description "A cheeky project for me to learn some basic OCaml")
 (depends ocaml)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
